# cetcher

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
cetcher/: main.py
cetcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_validation.py
